# ceres-emscripten

./: CMakeLists.txt  README  README.md  build_js.sh  build_osx.sh  helloworld.cc  helloworld.js.mem  index.html  rubaiyat_config.sh
avoider/: avoider.html  helloworld.js  helloworld.js.mem
helloworld/: helloworld.js
html/: helloworld.html
